@startuml

set separator none
package payment.controller {
    class PaymentController <<Function Group>> {
        + {static} createZaloOrder(req: Request, res: Response): RequestHandler
        + {static} receiveZaloCallback(req: Request, res: Response): RequestHandler
        + {static} getZaloOrderStatus(req: Request, res: Response): RequestHandler
    }
}

package services {
    class ZaloPay <<Singleton>> {
        - client: ZaloClient {readOnly}
        - orderID: number

        + createOrder(user_id: string, items: OrderItem[]): Promise<any>
        + receiveOrderCallback = (dataStr: string,reqMac: string): ZaloResult
    }
}

package types {
    interface ZaloClient {
      app_id: string;
      key1: string;
      key2: string;
      embed_data?: {
        redirectUrl?: string;
      };
    }
    interface ZaloResult {
      return_code: number;
      return_message: string;
    }
    interface OrderItem {
      itemname: string;
      itemprice: number;
      itemquantity: number;
    }
}

ZaloPay *-- ZaloClient
ZaloPay ..> ZaloResult
ZaloPay ..> OrderItem: 1..*

PaymentController ..> ZaloPay

@enduml